* Fix infinte loop bug when trying to render multi-line text in a small area.
* Fix interaction with loot hitboxes interfering with loot tooltips.
* Improved handling of mouse movement for melee characters. The player will no longer execute their primary melee attack if they are out of melee range of their target. Also, the player will begin to attack if they enter melee range while moving.
* Lots of code cleanup.

New translations:

* Brazilian Portuguese (pt_BR) by Gabriel Iasi, Vicente Monteiro
* Vietnamese (vi) by Nguyễn Gia Phong

Translation updates:

* Belarussian (be) update (Mikalai Valer'evich Sakalouski, Zmicer Turok)
* Czech (cs) update (hark34)
* German (de) update (Wuzzy2)
* Spanish (es) update (Diego J. Romero López)
* Scottish Gaelic (gd) update (GunChleoc)
* Russian (ru) update (Sam Vo)
* Chinese (zh) update (dumaosen)

Game changes:

* The player's name can now been seen if they write it in the Book of the Dead.
* Fixed not being able to do the Merchant's Journal quest if Abasi was in his final location.



Flare v1.06 (http://flarerpg.org/index.php/2018/05/23/flare-1-06/)

Engine features:

* Allow modders to define a target screen DPI for resolution scaling.
* Added video option to toggle using DPI scaling.
* Add virtual joystick buttons for touchscreen devices.
* Add ability to make groups of map enemies invincible based on campaign status.

Engine fixes:

* Fixed performance flaw when "always show statbar labels" was enabled.
* Fix bug where incorrect Power menu tooltip was fetched when not using a mouse.

Game changes:

* Fix Torture Chambers quest breaking if the player skips the switch at the end.
* Fix being able to attack imprisoned enemies in Torture Chambers by making them invincible while the barriers are up.
* Reset Torture Chambers quest if it was finished without opening the barriers.

Translation updates:

* Spanish (es) update (Diego J. Romero López)
* Scottish Gaelic (gd) update (GunChleoc)


