@@ -29,6 +29,7 @@ Engine fixes:
 * Fix infinte loop bug when trying to render multi-line text in a small area.
 * Fix interaction with loot hitboxes interfering with loot tooltips.
 * Improved handling of mouse movement for melee characters. The player will no longer execute their primary melee attack if they are out of melee range of their target. Also, the player will begin to attack if they enter melee range while moving.
+* The user keybindings are now reset if the keybindings file is not forwards compatible. Anyone using remapped keys will need to set them again with this update.
 * Lots of code cleanup.
 
 New translations:
